# oniri

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  flake.nix
doc/man/: oniri.1.scd
src/: main.rs
